--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       font-family: 'Noto Sans SC', sans-serif;
       /* 自定义图片背景 - 请替换为你的图片URL */
-      background: url('png/光遇.png') no-repeat center center fixed;
+      background: url('https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlCRpPFhdLtaIROhbX-Winf_hvsdfrgACtyIAAlAH4FXXCWyP8cltFjYE.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #f0f0f0;
       min-height: 100vh;
@@ -862,14 +862,14 @@
   <div class="container">
     <div class="left-side">
       <div class="person-card card-3d">
-        <div class="role">👤 你</div>
-        <img src="png/xiaoqin.jpg" alt="小覃" class="avatar" id="yourAvatar">
+        <div class="role">👤 靠山</div>
+        <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlCVpPFhdLDwXsEMPtgYSlkFFnVaH-AACuCIAAlAH4FUGWAOYnGUZUzYE.jpg" alt="小覃" class="avatar" id="yourAvatar">
         <div class="name">小覃</div>
       </div>
 
       <div class="person-card card-3d">
-        <div class="role">❤️ 她</div>
-        <img src="png/xiaoyi.jpg" alt="小怡" class="avatar" id="herAvatar">
+        <div class="role">❤️ 小怡大王</div>
+        <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlCNpPFhciQG7hZP5JrunOb-kkUlSSwACtiIAAlAH4FVMGxSfP5F5-zYE.jpg" alt="小怡" class="avatar" id="herAvatar">
         <div class="name">小怡</div>
       </div>
 
@@ -907,14 +907,14 @@
       <!-- 照片墙 -->
       <div id="photos" class="section photo-wall">
         <!-- 为每个图片添加data-index属性以便识别 -->
-        <div class="photo-item" data-index="0"><img src="png/d9f06decdb202a9ba58ec1533b65160.png" alt="纪念照片1"></div>
-        <div class="photo-item" data-index="1"><img src="png/d2d9ce0dddd61ed6a43ed7c112642e9.jpg" alt="纪念照片2"></div>
-        <div class="photo-item" data-index="2"><img src="png/cb09995ecff2e04a939a0dc87accd54.jpg" alt="纪念照片3"></div>
-        <div class="photo-item" data-index="3"><img src="png/c57e59c6fe15353df90e72de87c75fa.jpg" alt="纪念照片4"></div>
-        <div class="photo-item" data-index="4"><img src="png/bfb9ebd6b90110581b73ea1bb4cb5dd.png" alt="纪念照片5"></div>
-        <div class="photo-item" data-index="5"><img src="png/67d0c5c6cc38f886103dd452cab506f.jpg" alt="纪念照片6"></div>
-        <div class="photo-item" data-index="6"><img src="png/0f7dcb86626fd51f4b37ae4ebaa03dd.jpg" alt="纪念照片7"></div>
-        <div class="photo-item" data-index="7"><img src="png/07e0613aa1862a7fc44f03854b5f65b.jpg" alt="纪念照片8"></div>
+        <div class="photo-item" data-index="0"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBFpPFbPQUMYPGYjDh_HVT4CGWIfpQACoyIAAlAH4FWA7epzRJtGXTYE.jpg" alt="纪念照片1"></div>
+        <div class="photo-item" data-index="1"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBdpPFbUIsaADuJTdR_tvWLwQW4l-QACqSIAAlAH4FXrBhhQC00wmDYE.jpg" alt="纪念照片2"></div>
+        <div class="photo-item" data-index="2"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBZpPFbU-sm5nKa71lIEe6Vr6lR8PQACqCIAAlAH4FWfI_KH8K9rajYE.jpg" alt="纪念照片3"></div>
+        <div class="photo-item" data-index="3"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBhpPFbUGIboL-SbL3Zwr6jjq4Gm6gACqiIAAlAH4FXSVsePs5szfTYE.jpg" alt="纪念照片4"></div>
+        <div class="photo-item" data-index="4"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBJpPFbP9IOir8qPSPmhRtHkG2vXZgACpCIAAlAH4FX39KSd9CGovDYE.jpg" alt="纪念照片5"></div>
+        <div class="photo-item" data-index="5"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBNpPFbQ6BRnWcfljG0S517C8wJQuwACpSIAAlAH4FVo6Y-lz4aEDDYE.jpg" alt="纪念照片6"></div>
+        <div class="photo-item" data-index="6"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBVpPFbQx0tqYhr0kAyG2jYncn_RNgACpyIAAlAH4FX65PkFlRTUvzYE.jpg" alt="纪念照片7"></div>
+        <div class="photo-item" data-index="7"><img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMlBVpPFbQx0tqYhr0kAyG2jYncn_RNgACpyIAAlAH4FX65PkFlRTUvzYE.jpg" alt="纪念照片8"></div>
       </div>
 
       <!-- 心愿列表 -->
@@ -951,7 +951,7 @@
         </div>
       </div>
 
-      <footer>© 2025 小覃 & 小怡 | 圣诞快乐，爱意永存 🎄❤️</footer>
+      <footer>© 2025 小覃 & 小怡 | 圣诞快乐，友谊永存一辈子 🎄❤️</footer>
     </div>
   </div>
 
